# dots

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dots.example.conf  pyproject.toml  sample-config.conf
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
dots/: cli.py  crypto.py  errors.py  fs.py  logger.py  repo.py  ui.py
tests/: conftest.py  test_config.py  test_crypto.py  test_dirty.py  test_fs.py  test_repo.py  test_repo_encrypted.py
