[project]
name = "dots"
version = "0.1.0"
description = "Configuration files management tool"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Mathieu Deous", email = "mat.deous@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.43,<4",
]

[project.urls]
Repository = "https://github.com/mdeous/dots"

[project.scripts]
dots = "dots.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dots"]
