[project]
name = "dots"
version = "0.1.0"
description = "Configuration files management tool"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Mathieu Deous", email = "mat.deous@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.43,<4",
    "rich>=13",
    "typer>=0.12",
]

[project.urls]
Repository = "https://github.com/mdeous/dots"

[project.scripts]
dots = "dots.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.370",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dots"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "PTH"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["dots"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["dots"]

[tool.coverage.report]
show_missing = true
