[project]
name = "dotsman"
version = "0.1.0"
description = "Configuration files management tool"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Mathieu Deous", email = "mat.deous@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.46",
    "pyrage>=1.3.0",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[project.urls]
Repository = "https://github.com/mdeous/dots"

[project.scripts]
dots = "dots.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "pyright>=1.1.408",
    "pyrage-stubs>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dots"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "PTH"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["dots"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source = ["dots"]

[tool.coverage.report]
show_missing = true
